# NB-Classify

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  classifyMulti.cpp  classifySingle.cpp  classifySingleOpt.cpp  demo.sh  encrypt_model.cpp  setup.cpp  timer.hpp  tools.cpp  tools.h
datasets/: sample22_100_test.csv  sample22_30_test.csv  sample22_500_test.csv  sample22_50_test.csv  sample22_description.txt  sample22_info.csv  sample22_model.csv  sample22_model.json  sample22_train.csv  sample50_model.json  sample51_100_test.csv  sample51_500_test.csv  sample51_50_test.csv  sample51_description.txt  sample51_info.csv  sample51_model.csv  sample51_test.csv  sample51_train.csv  sample91_model.json  sample92_100_test.csv  sample92_30_test.csv  sample92_500_test.csv  sample92_50_test.csv  sample92_description.txt  sample92_info.csv  sample92_model.csv  sample92_train.csv  sample_description.txt  sample_info.csv  sample_model.csv  sample_test.csv  sample_train.csv
demo/: CMakeLists.txt
demo/client/: CMakeLists.txt  main.cpp
demo/cs/: CMakeLists.txt  main.cpp
demo/mp/: CMakeLists.txt  main.cpp
demo/share/: define.hpp
demo/ta/: CMakeLists.txt  config.txt  main.cpp
doc/: Doxyfile
nbc/: CMakeLists.txt
nbc/nbc_client/: CMakeLists.txt  nbc_client.cpp  nbc_client.hpp  nbc_client_cs_client.cpp  nbc_client_cs_client.hpp  nbc_client_dataset.cpp  nbc_client_dataset.hpp  nbc_client_recvthread.hpp  nbc_client_result_cbfunc.hpp  nbc_client_result_thread.cpp  nbc_client_result_thread.hpp  nbc_client_ta_client.cpp  nbc_client_ta_client.hpp
nbc/nbc_cs/: CMakeLists.txt  nbc_cs_client.cpp  nbc_cs_client.hpp  nbc_cs_share_callback_param.cpp  nbc_cs_share_callback_param.hpp  nbc_cs_srv1.cpp  nbc_cs_srv1.hpp  nbc_cs_srv1_callback_function.cpp  nbc_cs_srv1_callback_function.hpp  nbc_cs_srv1_state.cpp  nbc_cs_srv1_state.hpp  nbc_cs_ta_client.cpp  nbc_cs_ta_client.hpp
nbc/nbc_mp/: CMakeLists.txt  nbc_mp.cpp  nbc_mp.hpp  nbc_mp_cs_client.cpp  nbc_mp_cs_client.hpp  nbc_mp_model.cpp  nbc_mp_model.hpp  nbc_mp_ta_client.cpp  nbc_mp_ta_client.hpp
nbc/nbc_share/: CMakeLists.txt  nbc_basicdata.hpp  nbc_computeparam.cpp  nbc_computeparam.hpp  nbc_config.cpp  nbc_config.hpp  nbc_context.cpp  nbc_context.hpp  nbc_define.hpp  nbc_encdata.cpp  (+18 more)
testdata/: permvec.txt  sample_expect_result.txt
training/: classify.py  classify_orig.py  createData.py  createModel.py  splitData.py  train.py
(+15 files in other folders)
